# Aether

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  s.py
.github/workflows/: ci.yml
ai_engine/: right_sizer.py
api/: main.py
dashboard/: app.py
data_pipeline/: __init__.py  data_collector.py
infra/terraform/environments/dev/: terraform.tfvars
infra/terraform/modules/eks/: main.tf  variables.tf
infra/terraform/modules/prometheus/: main.tf  values.yaml
rules/: rule_engine.py
tests/: __init__.py  test_ai_engine.py  test_data_collector.py  test_rule_engine.py
